<resources>
    <string name="app_name" translatable="false">wallabag</string>
    <string name="btnMarkRead">Mark as Read</string>
    <string name="btnMarkUnread">Mark as Unread</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="menuShare">Share</string>
    <string name="menuNext">Next article</string>
    <string name="menuPrevious">Previous article</string>
    <string name="menuDelete">Delete</string>
    <string name="menuOpenOriginal">Open original</string>
    <string name="menuCopyOriginalURL">Copy original URL</string>
    <string name="menuTTS">Text To Speech</string>
    <string name="ttsSpeed">Rate</string>
    <string name="ttsPitch">Pitch</string>
    <string name="ttsVolume">Volume</string>
    <string name="ttsLanguage">Choose Language</string>
    <string name="ttsVoice">Choose Voice</string>
    <string name="ttsAutoplayNextArticle">AutoPlay Next Article</string>
    <string name="ttsError">Text To Speech Error</string>
    <string name="ttsFastRewind">Fast Rewind</string>
    <string name="ttsPlayPause">Play / Pause</string>
    <string name="ttsFastForward">Fast Forward</string>
    <string name="ttsOptions">Options</string>
    <string name="menu_open_random_article">Open random article</string>
    <string name="menu_syncLocalChanges">Sync local changes</string>
    <string name="d_deleteArticle_title">Delete article?</string>
    <string name="d_deleteArticle_message">Are you sure you want to delete the article?</string>
    <string name="txtNetOffline">Please check Internet connectivity!</string>
    <string name="txtConfigNotSet">Please configure the app before syncing.</string>
    <string name="txtUrlCopied">Article URL copied to clipboard</string>
    <string name="dialog_add_label">Add a new article</string>
    <string name="page_url">Page URL</string>
    <string name="share_article_title">Share article</string>
    <string name="share_text_extra">" via @wallabagapp"</string>
    <string name="positive_answer">Yes</string>
    <string name="negative_answer">No</string>
    <string name="no_articles">No articles</string>
    <string name="loading_article_text">Loading…</string>
    <string name="d_urlAction_title">Select an action for URL</string>
    <string name="d_urlAction_openInBrowser">Open in browser</string>
    <string name="d_urlAction_addToWallabag">Add to wallabag</string>
    <string name="d_urlAction_copyToClipboard">Copy to clipboard</string>
    <string name="ok">OK</string>
    <string name="d_add_fail_title">Fail</string>
    <string name="d_add_fail_text">Couldn\'t find a URL in share string:\n</string>
    <string name="d_configurationChanged_title">Parameters changed</string>
    <string name="d_configurationChanged_message">It seems some parameters have been changed. It is recommended to perform a connection test.</string>
    <string name="d_configurationChanged_answer_decline">Not now</string>
    <string name="d_configurationIsQuestionable_title">Problem detected</string>
    <string name="d_configurationIsQuestionable_message">There was a connection error recently. It is recommended to perform a connection test.</string>
    <string name="addLink_success_text">Added</string>
    <string name="settings_parametersAreOk">Parameters are fine</string>
    <string name="settings_parametersAutofilled">Parameters filled</string>
    <string name="testConnection_progressDialogMessage">Testing connection…</string>
    <string name="testConnection_errorMessage_incorrectUrl">Incorrect URL</string>
    <string name="testConnection_errorMessage_unsupportedServerVersion">Unsupported server version detected</string>
    <string name="testConnection_errorMessage_wallabagNotFound">wallabag service not found — check URL</string>
    <string name="testConnection_errorMessage_httpAuth">HTTP Authentication failed</string>
    <string name="testConnection_errorMessage_noCSRF">Error parsing login form</string>
    <string name="testConnection_errorMessage_incorrectCredentials">Can\'t log in — check username and password</string>
    <string name="testConnection_errorMessage_authProblems">Authorization-related problems. These usually caused by HTTP-redirects.</string>
    <string name="testConnection_errorMessage_unknownPageAfterLogin">Unknown page after login. This is usually caused by enabled two-factor authentication, which is not yet supported by the app</string>
    <string name="testConnection_errorMessage_unknown">Unknown error</string>
    <string name="testConnection_errorMessage_unknownWithMessage">Unknown error: %s</string>
    <string name="d_testConnection_urlSuggestion_title">Consider changing URL</string>
    <string name="d_testConnection_urlSuggestion_acceptButton">Use suggested</string>
    <string name="d_testConnection_urlSuggestion_declineButton">Use mine</string>
    <string name="d_testConnection_urlSuggestion_cancelButton">Cancel</string>
    <string name="d_testConnection_urlSuggestion_message">It is recommended to change URL to: "%s". But you may use the entered one too.</string>
    <string name="d_testConnection_urlSuggestion_message_mandatory">It is suggested to change URL to: "%s"</string>
    <string name="d_testConnection_fail_title">Connection test failed</string>
    <string name="getCredentials_progressDialogMessage">Getting API credentials…</string>
    <string name="d_getCredentials_title_fail">Couldn\'t get API credentials</string>
    <string name="d_getCredentials_title_message">Something went wrong. Check your internet connection and try again.</string>
    <string name="checkCredentials_progressDialogMessage">Testing API access…</string>
    <string name="d_checkCredentials_title_fail">API access test failed</string>
    <string name="d_checkCredentials_errorMessage_notFound">API not found</string>
    <string name="d_checkCredentials_errorMessage_notFoundWithMessage">API not found: %s</string>
    <string name="d_checkCredentials_errorMessage_noAccess">No access to API</string>
    <string name="d_checkCredentials_errorMessage_noAccessWithMessage">No access to API: %s</string>
    <string name="d_checkCredentials_errorMessage_unknown">Unknown error</string>
    <string name="d_checkCredentials_errorMessage_unknownWithMessage">Unknown error: %s</string>
    <string name="wrongUsernameOrPassword_errorMessage">Couldn\'t log in: Presumably wrong username or password</string>
    <string name="unsuccessfulRequest_errorMessage">"Request unsuccessful; response code: %1$d, response message: %2$s"</string>
    <string name="previousUpdateNotFinished">Previous update not finished yet</string>
    <string name="feedName_favorites">Favorites</string>
    <string name="feedName_archived">Archived</string>
    <string name="feedName_unread">Unread</string>
    <string name="articleList_favoriteMark">Favorite mark</string>
    <string name="articleList_ArchivedMark">Archived mark</string>
    <string name="noPreviousArticle">There is no previous article in current list</string>
    <string name="scrolledOverBottom">Scroll %d time(s) more over the bottom to mark the article as read</string>
    <string name="markedAsRead"> Article marked as read</string>
    <string name="noNextArticle">No more articles in current list</string>
    <string name="themeName_light">Light</string>
    <string name="themeName_light_contrast">Light (high contrast)</string>
    <string name="themeName_eink">For e-ink displays</string>
    <string name="themeName_dark">Dark</string>
    <string name="themeName_dark_contrast">Dark (high contrast)</string>
    <string name="themeName_solarized">Solarized</string>
    <string name="menu_readArticle_increaseFontSize">Increase font size</string>
    <string name="menu_readArticle_decreaseFontSize">Decrease font size</string>
    <string name="aboutText"><b>wallabag app for Android</b>\n
        wallabag is a self-hostable app, allowing you to not miss any content anymore. Click, save and read the extracted content at your leisure.</string>
    <string name="readSpeed">Read speed</string>
    <string name="voiceHeight">Voice pitch</string>
    <string name="readVolume">Read volume</string>
    <string name="menuDownloadAsFile">Download as file</string>
    <string name="dialog_title_downloadFileFormat">Select file format</string>
    <string name="downloadAsFilePathStart">Downloading article</string>
    <string name="downloadAsFileArticleDownloaded">Article downloaded</string>
    <string name="downloadAsFileArticleDownloadedDetail">Article %s downloaded</string>
    <string name="downloadAsFileTouchToOpen">Touch to open</string>
    <string name="downloadAsFileProgressDetail">wallabag downloads your article %1$s in %2$s</string>
    <string name="downloadAsFileProgress">wallabag downloads your article in %s</string>
    <string name="notification_updatingArticles">Updating articles</string>
    <string name="notification_updatingArticles_full">Performing full update</string>
    <string name="notification_updatingArticles_fast">Performing fast update</string>
    <string name="notification_sweepingDeletedArticles">Sweeping deleted articles</string>
    <string name="notification_downloadingImages">Downloading images</string>
    <string name="notification_syncingQueue">Synchronizing local changes</string>
    <string name="notification_error">Error</string>
    <string name="notification_incorrectCredentials">Incorrect credentials</string>
    <string name="notification_incorrectConfiguration">Incorrect configuration</string>
    <string name="notification_serverError">Server error</string>
    <string name="notification_unknownError">Unknown error</string>
    <string name="notification_expandedError">Error: %s</string>
    <string name="notification_channel_group_name_tts">TTS</string>
    <string name="notification_channel_group_name_sync">Synchronization</string>
    <string name="notification_channel_group_name_other">Other</string>
    <string name="notification_channel_name_tts">wallabag TTS</string>
    <string name="notification_channel_name_sync">Synchronization</string>
    <string name="notification_channel_name_downloading_articles">Downloading PDFs</string>
    <string name="notification_channel_name_error">Errors</string>
    <string name="menu_lists_search">Search</string>
    <string name="menu_lists_changeSortOrder">Change sort order</string>
    <string name="menu_lists_sweepDeletedArticles">\"Sweep\" deleted articles</string>
    <string name="menu_lists_fullUpdate">Full update</string>
    <string name="other_searchHint">Search by article title or text</string>
    <string name="menu_changeTitle">Change title</string>
    <string name="menu_manageTags">Manage tags</string>
    <string name="manageTags_title">Manage tags</string>
    <string name="manageTags_save">Save</string>
    <string name="manageTags_textField_hint">One or more tags separated by commas</string>
    <string name="manageTags_addNew">Add</string>
    <string name="manageTags_currentTags">Selected tags:</string>
    <string name="content_estimatedReadingTime">Estimated reading time: %s min</string>
    <string name="lastUpdateTimeLabel">Last update: %s</string>
    <string name="listItem_estimatedReadingTime">%d min</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_main_articles">Articles</string>
    <string name="nav_main_tags">Tags</string>
    <string name="nav_main_tagged_articles">Tagged articles</string>
    <string name="nav_add">Add new entry</string>
    <string name="nav_other_settings">Settings</string>
    <string name="nav_other_about">About</string>
    <string name="title_main_tag">Tag: %s</string>
    <string name="message_couldNotOpenUrl">Couldn\'t open this URL</string>
</resources>