<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/tab_layout_border_bottom"
    android:orientation="vertical"
    android:padding="10dp"
    android:foreground="?attr/selectableItemBackground"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="3dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:lineSpacingExtra="7dp"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textFontWeight="500"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/favourite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/articleList_favoriteMark"
                    android:src="@drawable/ic_star_solid_gray_24dp" />

                <ImageView
                    android:id="@+id/read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/articleList_ArchivedMark"
                    android:src="@drawable/ic_archive_gray_24dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="7dp">

                <TextView
                    android:id="@+id/url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="New Text" />

                <TextView
                    android:id="@+id/separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text=" · " />

                <TextView
                    android:id="@+id/estimatedReadingTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/listItem_estimatedReadingTime" />
            </LinearLayout>

        </LinearLayout>


        <ImageView
            android:id="@+id/previewImage"
            android:scaleType="centerCrop"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

</LinearLayout>